ADD: Created a deatachable log window and fixing sime build issues

--- a/frontend-client/electron/loading.html
+++ b/frontend-client/electron/loading.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gmail Automation - Loading</title>
+    <title>AutoISP - Loading</title>
     <style>
         * {
             margin: 0;
@@ -300,7 +300,7 @@
                     <path d="M22 6l-10 7L2 6" stroke="#a1a1aa" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
             </div>
-            <h1>Gmail Automation</h1>
+            <h1>AutoISP</h1>
             <p class="subtitle">Streamline your workflow</p>
         </div>
 
@@ -322,7 +322,7 @@
     <script>
         const statusMessages = [
             'Initializing application...',
-            'Connecting to Gmail...',
+            'Connecting to Backend...',
             'Loading your workspace...',
             'Setting up automation...',
             'Almost ready...'
